--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,34 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 450px;
+  max-width: 90%;
+  padding: 10px;
+  margin: 0 auto;
+  text-align: center;
+  font-family: sans-serif;
+  border: 2px dashed black;
+  border-radius: 20px;
+}
+.container button {
+  font-family: sans-serif;
+  padding: 10px 20px;
+  font-weight: bold;
+  font-size: 15px;
+  border: 1px solid black;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
+.container a {
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: bold;
+  color:red
+} 
